Styling updates to footer
Reorder html and update css

--- a/index.html
+++ b/index.html
@@ -56,21 +56,23 @@
 		</div>
 		<div class="text-col">
 			<p>Please get in touch if you would like to know more, or for more examples of my work.</p>
-			<p>Email: <a href="mailto:cppearson@gmail.com">cppearson@gmail.com</a></p>
-			<p>Download <a href="http://www.chrispearsondesign.co.uk/cv.pdf">CV</p>
+			<p><a href="mailto:cppearson@gmail.com">cppearson@gmail.com</a></p>
+			<p><a href="http://www.chrispearsondesign.co.uk/cv.pdf">Download CV</a></p>
 		</div>
 	</div>	
 </div>
 
 <footer>
-	<div id=footer-content>
-		<p><a href="mailto:cppearson@gmail.com">cppearson@gmail.com</a></p>
-		<p>Twitter</p>
-		<p>Linkedin</p>
-		<p>Instagram</p>
-	</div>
-	<div id=copyright>
-		<p><span style="font-family: arial;">&copy;</span> Chris Pearson 2018</p>
+	<div id="footer-wrapper">
+		<div id=footer-content>
+			<p><a href="mailto:cppearson@gmail.com">cppearson@gmail.com</a></p>
+			<p>Twitter</p>
+			<p>Linkedin</p>
+			<p>Instagram</p>
+		</div>
+		<div id=copyright>
+			<p><span style="font-family: arial;">&copy;</span> Chris Pearson 2018</p>
+		</div>
 	</div>
 </footer>
 </body>
