--- a/articles.html
+++ b/articles.html
@@ -32,6 +32,13 @@
 	  		</ul>
 		</nav>
 	</header>
+	<div id="project-grid-top">
+		<div>
+			<div id="project-top">
+				<h2>Articles</h2><!-- <p id="wip">Work in progress</p> -->
+			</div>
+		</div>
+	</div>
 </div>
 </body>
 
