--- a/casestudy.html
+++ b/casestudy.html
@@ -25,7 +25,7 @@
 		<div id="logo"><h1>Chris Pearson</h1></div>
 		<nav>
 			<ul>
-			  	<li><a class="active" href="index.html">Home</a></li>
+			  	<li><a href="index.html">Home</a></li>
 			  	<li><a href="projects.html">Projects</a></li>
 			  	<li><a href="articles.html">Articles</a></li>
 	  		</ul>
