--- a/projects.html
+++ b/projects.html
@@ -32,7 +32,7 @@
 	  		</ul>
 		</nav>
 	</header>
-	<div id="project-grid-top">
+	<div id="page-header-bar">
 		<div>
 			<div id="project-top">
 				<h2>Selected projects</h2><!-- <p id="wip">Work in progress</p> -->
