Add missing body tags

--- a/casestudy.html
+++ b/casestudy.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
-
 	<link rel="stylesheet" href="css/normalize.css"/>
 	
 	<script>
@@ -29,18 +28,32 @@
 				<ul>
 				  	<li><a href="index.html">Home</a></li>
 				  	<li><a href="projects.html">Projects</a></li>
-				  	<li><a class="active" href="articles.html">Articles</a></li>
+				  	<li><a href="articles.html">Articles</a></li>
 		  		</ul>
 			</nav>
 		</header>
 		<div id="project-grid-top">
 			<div>
 				<div id="project-top">
-					<h2>Articles</h2><!-- <p id="wip">Work in progress</p> -->
+					<p>Victoria and Albert Museum</p>
+					<p>Ticketing kiosk interface</p>
+					<
 				</div>
 			</div>
 		</div>
 	</div>
-</body>
 
-</html>
+	<footer>
+		<div id=footer-wrapper>
+		<div id=footer-content>
+			<p><a href="mailto:cppearson@gmail.com">cppearson@gmail.com</a></p>
+			<p><a href="https://twitter.com/c_p_pearson">Twitter</a></p>
+			<p><a href="https://www.linkedin.com/in/chris-pearson-8685b588/">Linkedin</a></p>
+			<p><a href="https://www.instagram.com/cpsparks/">Instagram</a></p>
+		</div>
+		<div id=copyright>
+			<p><span style="font-family: arial;">&copy;</span> Chris Pearson 2018</p>
+		</div>
+		</div>
+	</footer>
+</body>
