--- a/index.html
+++ b/index.html
@@ -19,62 +19,61 @@
 	  ga('send', 'pageview');
 	</script>
 </head>
-
-<div id="dark-wrapper">
-	<header id="header">
-		<div id="logo"><h1>Chris Pearson</h1></div>
-		<nav>
-			<ul>
-			  	<li><a class="active" href="index.html">Home</a></li>
-			  	<li><a href="projects.html">Projects</a></li>
-			  	<li><a href="articles.html">Articles</a></li>
-	  		</ul>
-		</nav>
-	</header>
-	<div class="pages">
-		<div id="intro-block">
+<body>
+	<div id="dark-wrapper">
+		<header id="header">
+			<div id="logo"><h1>Chris Pearson</h1></div>
+			<nav>
+				<ul>
+				  	<li><a class="active" href="index.html">Home</a></li>
+				  	<li><a href="projects.html">Projects</a></li>
+				  	<li><a href="articles.html">Articles</a></li>
+		  		</ul>
+			</nav>
+		</header>
+		<div class="pages">
+			<div id="intro-block">
+				<div id="left-col">
+					<h2 class="margin-header">About me</h2>
+				</div>
+				<div class="text-col">
+					<h3>I am a London based digital designer. Currently design lead at <a href="https://www.vam.ac.uk">the Victoria and Albert museum</a>, throughout my career I’ve designed for large organisations like <a href="https://www.theguardian.com">the Guardian</a>, the British Museum and the FT, as well as small design agencies and direct with clients.</h3>
+					<h3>Trained in graphic design and typography, I’ve spent many years immersed in digital technology, developing a passion for human centred design and crafting user interfaces.</h3>
+				</div>
+			</div>
+		</div>
+	</div>
+	<div id="white-wrapper">
+		<div class="pages">
 			<div id="left-col">
-				<h2 class="margin-header">About me</h2>
+				<h2 class="margin-header">More about me</h2>
 			</div>
 			<div class="text-col">
-				<h3>I am a London based digital designer. Currently design lead at <a href="https://www.vam.ac.uk">the Victoria and Albert museum</a>, throughout my career I’ve designed for large organisations like <a href="https://www.theguardian.com">the Guardian</a>, the British Museum and the FT, as well as small design agencies and direct with clients.</h3>
-				<h3>Trained in graphic design and typography, I’ve spent many years immersed in digital technology, developing a passion for human centred design and crafting user interfaces.</h3>
+				<p class="bar">Outside of work, I love to travel and be outdoors. I’m usually dreaming up an adventure, or training for a challenge of some kind. I’ve run multiple <a href="https://www.strava.com/athletes/2548119/training/log">marathons</a>, and cycled many miles, across many countries. I'm also a big fan of food, beer and the company of my wife and friends.</p>
 			</div>
-		</div>
+			<div id="left-col">
+				<h2 class="margin-header">Contact</h2>
+			</div>
+			<div class="text-col">
+				<p>Please get in touch if you would like to know more, or for more examples of my work.</p>
+				<p><a href="mailto:cppearson@gmail.com">cppearson@gmail.com</a></p>
+				<p><a href="http://www.chrispearsondesign.co.uk/cv.pdf">Download CV</a></p>
+			</div>
+		</div>	
 	</div>
-</div>
-<div id="white-wrapper">
-	<div class="pages">
-		<div id="left-col">
-			<h2 class="margin-header">More about me</h2>
-		</div>
-		<div class="text-col">
-			<p class="bar">Outside of work, I love to travel and be outdoors. I’m usually dreaming up an adventure, or training for a challenge of some kind. I’ve run multiple <a href="https://www.strava.com/athletes/2548119/training/log">marathons</a>, and cycled many miles, across many countries. I'm also a big fan of food, beer and the company of my wife and friends.</p>
-		</div>
-		<div id="left-col">
-			<h2 class="margin-header">Contact</h2>
-		</div>
-		<div class="text-col">
-			<p>Please get in touch if you would like to know more, or for more examples of my work.</p>
+	<footer>
+		<div id=footer-wrapper>
+		<div id=footer-content>
 			<p><a href="mailto:cppearson@gmail.com">cppearson@gmail.com</a></p>
-			<p><a href="http://www.chrispearsondesign.co.uk/cv.pdf">Download CV</a></p>
+			<p><a href="https://twitter.com/c_p_pearson">Twitter</a></p>
+			<p><a href="https://www.linkedin.com/in/chris-pearson-8685b588/">Linkedin</a></p>
+			<p><a href="https://www.instagram.com/cpsparks/">Instagram</a></p>
 		</div>
-	</div>	
-</div>
-
-<footer>
-	<div id=footer-wrapper>
-	<div id=footer-content>
-		<p><a href="mailto:cppearson@gmail.com">cppearson@gmail.com</a></p>
-		<p><a href="https://twitter.com/c_p_pearson">Twitter</a></p>
-		<p><a href="https://www.linkedin.com/in/chris-pearson-8685b588/">Linkedin</a></p>
-		<p><a href="https://www.instagram.com/cpsparks/">Instagram</a></p>
-	</div>
-	<div id=copyright>
-		<p><span style="font-family: arial;">&copy;</span> Chris Pearson 2018</p>
-	</div>
-	</div>
-</footer>
+		<div id=copyright>
+			<p><span style="font-family: arial;">&copy;</span> Chris Pearson 2018</p>
+		</div>
+		</div>
+	</footer>
 </body>
 
 </html>
