Fix broken page headers
Update header class to fix this

--- a/articles.html
+++ b/articles.html
@@ -33,7 +33,7 @@
 		  		</ul>
 			</nav>
 		</header>
-		<div id="project-grid-top">
+		<div id="page-header-bar">
 			<div>
 				<div id="project-top">
 					<h2>Articles</h2><!-- <p id="wip">Work in progress</p> -->
