--- a/casestudy.html
+++ b/casestudy.html
@@ -32,7 +32,7 @@
 		  		</ul>
 			</nav>
 		</header>
-		<div id="project-grid-top">
+		<div id="page-header-bar">
 			<div>
 				<div id="project-top">
 					<p>Victoria and Albert Museum</p>
