--- a/casestudy.html
+++ b/casestudy.html
@@ -35,9 +35,9 @@
 		<div id="page-header-bar">
 			<div>
 				<div id="project-top">
-					<p>Victoria and Albert Museum</p>
-					<p>Ticketing kiosk interface</p>
-					<
+					<h2>Victoria and Albert Museum</h2>
+					<h2>Ticketing kiosk interface</h2>
+					<p>A simple, intuative interface for purchasing exhibition tickets in the V&amp;A’s new entrance</p>
 				</div>
 			</div>
 		</div>
