Add case study content
Add text and image

--- a/casestudy.html
+++ b/casestudy.html
@@ -33,13 +33,27 @@
 			</nav>
 		</header>
 		<div id="page-header-bar">
-			<div>
-				<div id="project-top">
+			<div id="project-top">
 					<h2>Victoria and Albert Museum</h2>
 					<h2>Ticketing kiosk interface</h2>
 					<p>A simple, intuative interface for purchasing exhibition tickets in the V&amp;A’s new entrance</p>
-				</div>
 			</div>
+		</div>
+	</div>
+
+	<div id="white-wrapper">
+		<div id="lead-paragraph">
+			<p>Google ran two large surveys of online behaviour: the Consumer Barometer questionnaire, and the Connected Consumer Study. Together, they covered thousands of adults in over 50 countries.</p>
+			<p>Google then asked Hive to design and develop a simple, intuitive app that would allow people to explore and interpret these findings.</p>
+		</div>
+		<div id="project-body">
+			<div id="left-col">
+					<h2 class="margin-header">Process</h2>
+				</div>
+			<img src="images/ticketingscreens.png">
+			<p>Over several months, we defined the system architecture, competitor landscape, user experience, brand identity and visual language. The result? A tool that simplifies the processing of big sets of data, so users can ask questions, discover new insights and extract real value.</p>
+			<p>Over several months, we defined the system architecture, competitor landscape, user experience, brand identity and visual language. The result? A tool that simplifies the processing of big sets of data, so users can ask questions, discover new insights and extract real value.</p>
+			<p>Over several months, we defined the system architecture, competitor landscape, user experience, brand identity and visual language. The result? A tool that simplifies the processing of big sets of data, so users can ask questions, discover new insights and extract real value.</p>
 		</div>
 	</div>
 
