Update styles to case study header

--- a/casestudy.html
+++ b/casestudy.html
@@ -34,17 +34,19 @@
 		</header>
 		<div id="page-header-bar">
 			<div id="project-top">
-					<h2>Victoria and Albert Museum</h2>
-					<h2>Ticketing kiosk interface</h2>
-					<p>A simple, intuative interface for purchasing exhibition tickets in the V&amp;A’s new entrance</p>
+				<div class="project-kickers">
+					<p class="client">Victoria and Albert Museum</p>
+					<p class="project-name">Ticketing kiosk interface</p>
+					<p class="case-study-intro">A simple, intuative interface for purchasing exhibition tickets in the V&amp;A’s new entrance</p>
+				</div>
 			</div>
 		</div>
 	</div>
 
-	<div id="white-wrapper">
+	<div id="white-wrapper" class="pages">
 		<div id="lead-paragraph">
-			<p>Google ran two large surveys of online behaviour: the Consumer Barometer questionnaire, and the Connected Consumer Study. Together, they covered thousands of adults in over 50 countries.</p>
-			<p>Google then asked Hive to design and develop a simple, intuitive app that would allow people to explore and interpret these findings.</p>
+			<p>Earlier this year, with only two months until the new V&A Exhibition Road Quarter opened it’s doors to the public, I was given the rather urgent task of designing a digital interface, to allow visitors to buy tickets from self-service kiosks.</p>
+			<p>The concept had been conceived some time ago, by A_LA, the architects of the new Exhibition Road Quarter. As part of that ambitious vision, 8 large 56″ display screens would be joined side by side, to form a continuous horizontal display.</p>
 		</div>
 		<div id="project-body">
 			<div id="left-col">
