Style updates to case study page

--- a/casestudy.html
+++ b/casestudy.html
@@ -33,18 +33,18 @@
 			</nav>
 		</header>
 		<div id="page-header-bar">
-			<div id="project-top">
+			<div id="case-study-container">
 				<div class="project-kickers">
 					<p class="client">Victoria and Albert Museum</p>
 					<p class="project-name">Ticketing kiosk interface</p>
-					<p class="case-study-intro">A simple, intuative interface for purchasing exhibition tickets in the V&amp;A’s new entrance</p>
 				</div>
+				<p class="case-study-intro">A simple, intuative interface for purchasing exhibition tickets in the V&amp;A’s new entrance</p>
 			</div>
 		</div>
 	</div>
 
 	<div id="white-wrapper" class="pages">
-		<div id="lead-paragraph">
+		<div class="lead-paragraph">
 			<p>Earlier this year, with only two months until the new V&A Exhibition Road Quarter opened it’s doors to the public, I was given the rather urgent task of designing a digital interface, to allow visitors to buy tickets from self-service kiosks.</p>
 			<p>The concept had been conceived some time ago, by A_LA, the architects of the new Exhibition Road Quarter. As part of that ambitious vision, 8 large 56″ display screens would be joined side by side, to form a continuous horizontal display.</p>
 		</div>
