--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				</div>
 				<div class="text-col">
 					<h3>I am a London based digital designer. Currently design lead at <a href="https://www.vam.ac.uk">the Victoria and Albert museum</a>, throughout my career I’ve designed for large organisations like <a href="https://www.theguardian.com">the Guardian</a>, the British Museum and the FT, as well as small design agencies and direct with clients.</h3>
-					<h3>Trained in graphic design and typography, I’ve spent many years immersed in digital technology, developing a passion for human centred design and crafting user interfaces.</h3>
+					<h3 style="margin-bottom: 6px">Trained in graphic design and typography, I’ve spent many years immersed in digital technology, developing a passion for human centred design and crafting user interfaces.</h3>
 				</div>
 			</div>
 		</div>
