Styling to case study

--- a/casestudy.html
+++ b/casestudy.html
@@ -45,8 +45,8 @@
 
 	<div id="white-wrapper" class="pages">
 		<div class="lead-paragraph">
-			<p>Earlier this year, with only two months until the new V&A Exhibition Road Quarter opened it’s doors to the public, I was given the rather urgent task of designing a digital interface, to allow visitors to buy tickets from self-service kiosks.</p>
-			<p>The concept had been conceived some time ago, by A_LA, the architects of the new Exhibition Road Quarter. As part of that ambitious vision, 8 large 56″ display screens would be joined side by side, to form a continuous horizontal display.</p>
+			<p class="intro-left">Earlier this year, with only two months until the new V&amp;A Exhibition Road Quarter opened it’s doors to the public, I was given the rather urgent task of designing a digital interface, to allow visitors to buy tickets from self-service kiosks.</p>
+			<p class="intro-right">The concept had been conceived some time ago, by A_LA, the architects of the new Exhibition Road Quarter. As part of that ambitious vision, 8 large 56″ display screens would be joined side by side, to form a continuous horizontal display.</p>
 		</div>
 		<div id="project-body">
 			<div id="left-col">
