Style updates to case study page

--- a/casestudy.html
+++ b/casestudy.html
@@ -21,6 +21,7 @@
 </head>
 
 <body>
+	<div id="stripe"></div>
 	<div id="dark-wrapper">
 		<header id="header">
 			<div id="logo"><h1>Chris Pearson</h1></div>
@@ -45,17 +46,23 @@
 
 	<div id="white-wrapper" class="pages">
 		<div class="lead-paragraph">
-			<p class="intro-left">Earlier this year, with only two months until the new V&amp;A Exhibition Road Quarter opened it’s doors to the public, I was given the rather urgent task of designing a digital interface, to allow visitors to buy tickets from self-service kiosks.</p>
-			<p class="intro-right">The concept had been conceived some time ago, by A_LA, the architects of the new Exhibition Road Quarter. As part of that ambitious vision, 8 large 56″ display screens would be joined side by side, to form a continuous horizontal display.</p>
+			<div class="intro-left">
+				<p>Earlier this year, with only two months until the new V&amp;A Exhibition Road Quarter opened it’s doors to the public, I was given the rather urgent task of designing a digital interface, to allow visitors to buy tickets from self-service kiosks.</p>
+			</div>
+			<div class="intro-right">
+				<p>The concept had been conceived some time ago, by A_LA, the architects of the new Exhibition Road Quarter. As part of that ambitious vision, 8 large 56″ display screens would be joined side by side, to form a continuous horizontal display.</p>
+			</div>
 		</div>
 		<div id="project-body">
-			<div id="left-col">
-					<h2 class="margin-header">Process</h2>
-				</div>
 			<img src="images/ticketingscreens.png">
-			<p>Over several months, we defined the system architecture, competitor landscape, user experience, brand identity and visual language. The result? A tool that simplifies the processing of big sets of data, so users can ask questions, discover new insights and extract real value.</p>
-			<p>Over several months, we defined the system architecture, competitor landscape, user experience, brand identity and visual language. The result? A tool that simplifies the processing of big sets of data, so users can ask questions, discover new insights and extract real value.</p>
-			<p>Over several months, we defined the system architecture, competitor landscape, user experience, brand identity and visual language. The result? A tool that simplifies the processing of big sets of data, so users can ask questions, discover new insights and extract real value.</p>
+			<div id="left-col">
+				<h2 class="margin-header">Process</h2>
+			</div>
+			<div class="text-col">
+				<p>Over several months, we defined the system architecture, competitor landscape, user experience, brand identity and visual language. The result? A tool that simplifies the processing of big sets of data, so users can ask questions, discover new insights and extract real value.</p>
+				<p>Over several months, we defined the system architecture, competitor landscape, user experience, brand identity and visual language. The result? A tool that simplifies the processing of big sets of data, so users can ask questions, discover new insights and extract real value.</p>
+				<p>Over several months, we defined the system architecture, competitor landscape, user experience, brand identity and visual language. The result? A tool that simplifies the processing of big sets of data, so users can ask questions, discover new insights and extract real value.</p>
+			</div>
 		</div>
 	</div>
 
