Getting rid of borders

--- a/case-study/casestudy.html
+++ b/case-study/casestudy.html
@@ -6,8 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet">
-	<link href="css/style.css" rel="stylesheet">
-	<link rel="stylesheet" href="css/normalize.css"/>
+	<link rel="stylesheet" href="../css/style.css" >
+	<link rel="stylesheet" href="../css/normalize.css"/>
 	
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -22,14 +22,16 @@
 
 <body>
 	<div id="stripe"></div>
-	<div id="dark-wrapper">
+	<div id="stripe-right"></div>
+<!-- 	<div id="stripe-top"></div>
+ -->	<div id="dark-wrapper">
 		<header id="header">
 			<div id="logo"><h1>Chris Pearson</h1></div>
 			<nav>
 				<ul>
-				  	<li><a href="index.html">Home</a></li>
-				  	<li><a href="projects.html">Projects</a></li>
-				  	<li><a href="articles.html">Articles</a></li>
+				  	<li><a href="../index.html">Home</a></li>
+				  	<li><a href="../projects.html">Projects</a></li>
+				  	<li><a href="../articles.html">Articles</a></li>
 		  		</ul>
 			</nav>
 		</header>
@@ -39,7 +41,7 @@
 					<p class="client">Victoria and Albert Museum</p>
 					<p class="project-name">Ticketing kiosk interface</p>
 				</div>
-				<p class="case-study-intro">A simple, intuative interface for purchasing exhibition tickets in the V&amp;A’s new entrance</p>
+				<p class="case-study-intro">A simple touchscreen interface for purchasing exhibition tickets at the V&amp;A’s new entrance</p>
 			</div>
 		</div>
 	</div>
@@ -54,7 +56,7 @@
 			</div>
 		</div>
 		<div id="project-body">
-			<img src="images/ticketingscreens.png">
+			<img src="../images/ticketingscreens.png">
 			<div id="left-col">
 				<h2 class="margin-header">Process</h2>
 			</div>
