--- a/projects.html
+++ b/projects.html
@@ -44,7 +44,7 @@
 	<div id="white-wrapper">
 		<div id="grid-container">
 			<figure class="grid-item">
-				<a href="casestudy.html">
+				<a href="case-study/casestudy.html">
 					<div class=project-image>
 						<img src="images/ticketingscreens.png">
 					</div>
