Add project images
Plus further style tweaks

--- a/articles.html
+++ b/articles.html
@@ -7,7 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 	<link href="https://fonts.googleapis.com/css?family=Karla:400,700" rel="stylesheet">
 	<link href="css/style.css" rel="stylesheet">
-
 	<link rel="stylesheet" href="css/normalize.css"/>
 	
 	<script>
@@ -20,11 +19,10 @@
 	  ga('send', 'pageview');
 	</script>
 </head>
-
 <body>
 	<div id="dark-wrapper">
 		<header id="header">
-			<div id="logo"><h1>Chris Pearson</h1></div>
+			<div id="logo"><h1><a href="index.html">Chris Pearson</a></h1></div>
 			<nav>
 				<ul>
 				  	<li><a href="index.html">Home</a></li>
@@ -41,6 +39,10 @@
 			</div>
 		</div>
 	</div>
+	<div id="white-wrapper">
+		<div class="pages">
+			<h4 style="color: #676767">Work in progress...</h4>
+		</div>
+	</div>	
 </body>
-
 </html>
