--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,7 @@
 <body>
 	<div id="dark-wrapper">
 		<header id="header">
-			<div id="logo"><h1>Chris Pearson</h1></div>
+			<div id="logo"><h1><a href="index.html">Chris Pearson</a></h1></div>
 			<nav>
 				<ul>
 				  	<li><a href="index.html">Home</a></li>
@@ -53,27 +53,27 @@
 								<h4>Ticketing kiosks at the V&amp;A</h4>
 						</div>
 					<div class="project-description">
-						<p>A simple, intuative interface for purchasing exhibition tickets in the V&amp;A’s new entrance</p>
+						<p>A simple intuative interface for purchasing exhibition tickets, in the V&amp;A’s Exhibition Road entrance</p>
 					</div>
 				</a>
 				</figcaption>
 			</figure>
 			<figure class="grid-item right-col">
 				<a href="http://www.chrispearsondesign.co.uk">
-					<div class=project-image><img src="images/guardianarticle.png"></div>
+					<div class=project-image><img src="images/guardianarticle.jpg"></div>
 					<figcaption>
 						<div class="project-title">
 							<h4>The Guardian article pages</h4>
 						</div>
 						<div class="project-description">
-							<p>Designing a responsive article page system</p>
+							<p>Designing a responsive article page system to handle the wealth of guardian editorial content</p>
 						</div>
 					</figcaption>
 				</a>
 			</figure>
 			<figure class="grid-item">
 				<a href="http://www.chrispearsondesign.co.uk">
-					<div class=project-image><img src="images/VEmapping.png"></div>
+					<div class=project-image><img src="images/VEmapping.jpg"></div>
 					<figcaption>
 						<div class="project-title">
 							<h4>Mapping the visitor experience at the V&amp;A</h4>
@@ -85,7 +85,7 @@
 				</a>	
 			</figure>
 			<figure class="grid-item right-col">
-				<div class=project-image><img src="images/placeholder.png"></div>
+				<div class=project-image><img src="images/VA_courses.jpg"></div>
 				<figcaption>
 					<div class="project-title">
 						<h4>Project description four</h4>
@@ -96,7 +96,7 @@
 				</figcaption>
 			</figure>
 			<figure class="grid-item">
-				<div class=project-image><img src="images/placeholder.png"></div>
+				<div class=project-image><img src="images/VA_WO_screens.jpg"></div>
 				<figcaption>
 					<div class="project-title">
 						<h4>Project description five</h4>
@@ -107,7 +107,7 @@
 				</figcaption>
 			</figure>
 			<figure class="grid-item right-col">
-				<div class=project-image><img src="images/placeholder.png"></div>
+				<div class=project-image><img src="images/guardian_galleries.jpg"></div>
 				<figcaption>
 					<div class="project-title">
 						<h4>Project description six</h4>
