--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 	<div id="dark-wrapper">
 		<header id="header">
-			<div id="logo"><h1>Chris Pearson</h1></div>
+			<div id="logo"><h1><a href="index.html">Chris Pearson</a></h1></div>
 			<nav>
 				<ul>
 				  	<li><a class="active" href="index.html">Home</a></li>
