Add title and descriptions to projects

--- a/projects.html
+++ b/projects.html
@@ -88,10 +88,10 @@
 				<div class=project-image><img src="images/VA_courses.jpg"></div>
 				<figcaption>
 					<div class="project-title">
-						<h4>Project description four</h4>
+						<h4>V&amp;A course pages</h4>
 					</div>
 					<div class="project-description">
-						<p>Placeholder project description</p>
+						<p>Creating a page to promote and book courses at the V&amp;A</p>
 					</div>
 				</figcaption>
 			</figure>
@@ -99,10 +99,10 @@
 				<div class=project-image><img src="images/VA_WO_screens.jpg"></div>
 				<figcaption>
 					<div class="project-title">
-						<h4>Project description five</h4>
+						<h4>Wallscreens at the V&amp;A</h4>
 					</div>
 					<div class="project-description">
-						<p>Placeholder project description</p>
+						<p>A dynamic auto resfreshing screen to promote the days events and activities to visitors at the V&amp;A</p>
 					</div>
 				</figcaption>
 			</figure>
@@ -110,7 +110,7 @@
 				<div class=project-image><img src="images/guardian_galleries.jpg"></div>
 				<figcaption>
 					<div class="project-title">
-						<h4>Project description six</h4>
+						<h4>The Guardian responsive image galleries</h4>
 					</div>
 					<div class="project-description">
 						<p>Placeholder project description</p>
