--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 				<h2 class="margin-header">More about me</h2>
 			</div>
 			<div class="text-col">
-				<p class="bar">Outside of work, I love to travel and be outdoors. I’m usually dreaming up an adventure, or training for a challenge of some kind. I’ve run multiple <a href="https://www.strava.com/athletes/2548119/training/log">marathons</a>, and cycled many miles, across many countries. I'm also a big fan of food, beer and the company of my wife and friends.</p>
+				<p class="bar">Outside of work, I love to travel and be outdoors. I’m usually dreaming up an adventure, or training for a challenge of some kind. I’ve run multiple <a href="https://www.strava.com/athletes/2548119/training/log">marathons</a>, cycled many miles across many countries. I also enjoy nothing more than food, beer and the company of my wife and friends.</p>
 			</div>
 			<div id="left-col">
 				<h2 class="margin-header">Contact</h2>
