Adding case-study pages
Adding unique pages for this and minor amends

--- a/case-study/case-study_ticketing-screens.html
+++ b/case-study/case-study_ticketing-screens.html
@@ -41,12 +41,17 @@
 					<p class="client">Victoria and Albert Museum</p>
 					<p class="project-name">Ticketing kiosk interface</p>
 				</div>
-				<p class="case-study-intro">A simple touchscreen interface for purchasing exhibition tickets at the V&amp;A’s new entrance</p>
+				<p class="case-study-intro">A simple intuitive interface for purchasing exhibition tickets, in the V&amp;A’s Exhibition Road entrance</p>
 			</div>
 		</div>
 	</div>
 
-	<div id="white-wrapper" class="pages">
+		<div id="white-wrapper">
+		<div class="pages">
+			<h4 style="color: #676767">Case study in progress</h4>
+	</div>
+
+<!-- 	<div id="white-wrapper" class="pages">
 		<div class="lead-paragraph">
 			<div class="intro-left">
 				<p>Earlier this year, with only two months until the new V&amp;A Exhibition Road Quarter opened it’s doors to the public, I was given the rather urgent task of designing a digital interface, to allow visitors to buy tickets from self-service kiosks.</p>
@@ -66,9 +71,9 @@
 				<p>Over several months, we defined the system architecture, competitor landscape, user experience, brand identity and visual language. The result? A tool that simplifies the processing of big sets of data, so users can ask questions, discover new insights and extract real value.</p>
 			</div>
 		</div>
-	</div>
+	</div> -->
 
-	<footer>
+<!-- 	<footer>
 		<div id=footer-wrapper>
 		<div id=footer-content>
 			<p><a href="mailto:cppearson@gmail.com">cppearson@gmail.com</a></p>
@@ -80,5 +85,5 @@
 			<p><span style="font-family: arial;">&copy;</span> Chris Pearson 2018</p>
 		</div>
 		</div>
-	</footer>
+	</footer> -->
 </body>
