--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			<div class="text-col">
 				<p>Please get in touch if you would like to know more, or for more examples of my work.</p>
 				<p><a href="mailto:cppearson@gmail.com">cppearson@gmail.com</a></p>
-				<p><a href="http://www.chrispearsondesign.co.uk/cv.pdf">Download CV</a></p>
+<!-- 				<p><a href="http://www.chrispearsondesign.co.uk/cv.pdf">Download CV</a></p> -->
 			</div>
 		</div>	
 	</div>
