--- a/projects.html
+++ b/projects.html
@@ -44,7 +44,7 @@
 	<div id="white-wrapper">
 		<div id="grid-container">
 			<figure class="grid-item">
-				<a href="case-study/casestudy.html">
+				<a href="case-study/case-study_ticketing-screens.html">
 					<div class=project-image>
 						<img src="images/ticketingscreens.png">
 					</div>
@@ -53,69 +53,75 @@
 								<h4>Ticketing kiosks at the V&amp;A</h4>
 						</div>
 					<div class="project-description">
-						<p>A simple intuative interface for purchasing exhibition tickets, in the V&amp;A’s Exhibition Road entrance</p>
+						<p>A simple intuitive interface for purchasing exhibition tickets, in the V&amp;A’s Exhibition Road entrance</p>
 					</div>
 				</a>
 				</figcaption>
 			</figure>
 			<figure class="grid-item right-col">
-				<a href="http://www.chrispearsondesign.co.uk">
+				<a href="case-study/case-study_guardian-article-page.html">
 					<div class=project-image><img src="images/guardianarticle.jpg"></div>
 					<figcaption>
 						<div class="project-title">
 							<h4>The Guardian article pages</h4>
 						</div>
 						<div class="project-description">
-							<p>Designing a responsive article page system to handle the wealth of guardian editorial content</p>
+							<p>A responsive article page system to handle the wealth of the guardian's editorial content</p>
 						</div>
 					</figcaption>
 				</a>
 			</figure>
 			<figure class="grid-item">
-				<a href="http://www.chrispearsondesign.co.uk">
+				<a href="case-study/case-study_vanda-visitor-experience.html">
 					<div class=project-image><img src="images/VEmapping.jpg"></div>
 					<figcaption>
 						<div class="project-title">
 							<h4>Mapping the visitor experience at the V&amp;A</h4>
 						</div>
 						<div class="project-description">
-							<p>Making sense of the wealth of physical and digital touch points between the V&amp;A and it's visitors</p>
+							<p>Making sense of the wealth of physical and digital touch points between the museum and it's visitors</p>
 						</div>
 					</figcaption>
 				</a>	
 			</figure>
 			<figure class="grid-item right-col">
-				<div class=project-image><img src="images/VA_courses.jpg"></div>
-				<figcaption>
-					<div class="project-title">
-						<h4>V&amp;A course pages</h4>
-					</div>
-					<div class="project-description">
-						<p>Creating a page to promote and book courses at the V&amp;A</p>
-					</div>
-				</figcaption>
+				<a href="case-study/case-study_vanda-course-pages.html">
+					<div class=project-image><img src="images/VA_courses.jpg"></div>
+					<figcaption>
+						<div class="project-title">
+							<h4>V&amp;A course pages</h4>
+						</div>
+						<div class="project-description">
+							<p>A dynamic page template to promote and book courses at the V&amp;A</p>
+						</div>
+					</figcaption>
+				</a>
 			</figure>
 			<figure class="grid-item">
-				<div class=project-image><img src="images/VA_WO_screens.jpg"></div>
-				<figcaption>
-					<div class="project-title">
-						<h4>Wallscreens at the V&amp;A</h4>
-					</div>
-					<div class="project-description">
-						<p>A dynamic auto resfreshing screen to promote the days events and activities to visitors at the V&amp;A</p>
-					</div>
-				</figcaption>
+				<a href="case-study/case-study_vanda-wall-screens.html">
+					<div class=project-image><img src="images/VA_WO_screens.jpg"></div>
+					<figcaption>
+						<div class="project-title">
+							<h4>Wallscreens at the V&amp;A</h4>
+						</div>
+						<div class="project-description">
+							<p>Auto refreshing screens to promote the days events and activities to visitors at the V&amp;A</p>
+						</div>
+					</figcaption>
+				</a>
 			</figure>
 			<figure class="grid-item right-col">
-				<div class=project-image><img src="images/guardian_galleries.jpg"></div>
-				<figcaption>
-					<div class="project-title">
-						<h4>The Guardian responsive image galleries</h4>
-					</div>
-					<div class="project-description">
-						<p>Placeholder project description</p>
-					</div>
-				</figcaption>
+				<a href="case-study/case-study_guardian-image-galleries.html">
+					<div class=project-image><img src="images/guardian_galleries.jpg"></div>
+					<figcaption>
+						<div class="project-title">
+							<h4>The Guardian responsive image galleries</h4>
+						</div>
+						<div class="project-description">
+							<p>A responsive page template, and light-box view of the guardians photographic content</p>
+						</div>
+					</figcaption>
+				</a>
 			</figure>
 		</div>
 	</div>
