--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 					<h2 class="margin-header">About me</h2>
 				</div>
 				<div class="text-col">
-					<h3>I am a London based digital designer. Currently design lead at <a href="https://www.vam.ac.uk">the Victoria and Albert museum</a>, throughout my career I’ve designed for large organisations like <a href="https://www.theguardian.com">the Guardian</a>, the British Museum and the FT, as well as small design agencies and direct with clients.</h3>
+					<h3>I am a London based digital designer. Currently design lead at Condé Nast International, throughout my career I’ve designed for large organisations like <a href="https://www.vam.ac.uk">the Victoria and Albert museum </a>and <a href="https://www.theguardian.com">the Guardian</a>, as well as small design agencies and direct with clients.</h3>
 					<h3 style="margin-bottom: 6px">Trained in graphic design and typography, I’ve spent many years immersed in digital technology, developing a passion for human centred design and crafting user interfaces.</h3>
 				</div>
 			</div>
